# libhimmelblau

./: .gitignore  .gitlab-ci.yml  CONTRIBUTING.md  Cargo.toml  DESIGN.md  Makefile  README.md  build.rs  cbindgen.toml
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml  clippy.yml
.gitlab/: renovate.json
example/: Makefile  msal_example.c  msal_example.py  msal_obo_end_to_end_test.py  msal_obo_example.c  msal_obo_example.py  msal_public_example.py  run_c_obo_scenario4.sh
overrides/paste/: Cargo.toml
src/: aadsts_err_gen.rs  auth.rs  c_helper.rs  capi.rs  confidential_client.rs  discovery.rs  enroll.rs  error.rs  graph.rs  intune.rs  krb5.rs  lib.rs  pyapi.rs  serializer.rs
