[package]
name = "libhimmelblau"
description = "Samba Library for Azure Entra ID Authentication"
version = "0.6.0"
edition = "2021"
authors = [
    "David Mulder <dmulder@suse.com>"
]
license = "LGPL-3.0-or-later"
homepage = "https://www.samba.org/"
repository = "https://gitlab.com/samba-team/libhimmelblau"

[lib]
name = "himmelblau"
path = "src/lib.rs"
crate-type = ["rlib", "cdylib"]

[features]
default = ["broker"]
broker = ["dep:compact_jwt", "compact_jwt/msextensions", "dep:kanidm-hsm-crypto", "compact_jwt/hsm-crypto", "kanidm-hsm-crypto/msextensions"]
tpm = ["broker", "kanidm-hsm-crypto/tpm"]
capi = ["broker"]
pyapi = ["broker", "dep:pyo3"]
developer = ["broker", "proxyable"]
proxyable = []
interactive = ["dep:browser-window", "browser-window/webkitgtk", "browser-window/threadsafe"]
changepassword = []

[dependencies]
base64 = "^0.22.0"
reqwest = { version = "^0.12.2", features = ["json", "cookies"] }
serde = { version = "^1.0.180", features = ["derive"] }
serde_json = "^1.0.96"
tracing = "^0.1.37"
urlencoding = "2.1.3"
uuid = { version = "^1.4.1", features = [ "v4", "serde" ] }
os-release = "^0.1.0"
hostname = "^0.4.0"
openssl = "^0.10.55"
compact_jwt = { version = "0.4.0-dev", optional = true }
kanidm-hsm-crypto = { version = "^0.2.0", optional = true }
regex = "^1.10.3"
zeroize = { version = "^1.7.0", features = ["zeroize_derive"] }
scraper = "0.19.0"
tokio = { version = "1.37.0", features = ["full"] }
tracing-subscriber = "0.3.18"
pyo3 = { version = "0.21.2", features = ["extension-module"], optional = true }
paste = "1.0.15"
picky-krb = "0.8.0"
picky-asn1-der = "0.4.1"
picky-asn1 = "0.8.0"
himmelblau_kerberos_crypto = "0.4.0"
himmelblau_kerberos_ccache = "0.4.0"
chrono = "0.4.38"
percent-encoding = "2.3.1"
browser-window = { version = "0.12.3", features = ["webkitgtk", "threadsafe"], optional = true }

[build-dependencies]
cbindgen = "0.26.0"

[package.metadata.capi.library]
version_suffix_components = 1
